fixed typo adjusted contact me button

--- a/_data/content.yml
+++ b/_data/content.yml
@@ -8,7 +8,7 @@ about:
   title: "About Me"
   text: "
         <p>
-          <strong>Hello! I’m Tyler Eynon.</strong><br> I am a Systems Engineer from Canton, Ohio. I have over a decade of experience as an I.T. Engineer, as well as an In-Home repair tech. I would love to help with any issues you have with your systems!.
+          <strong>Hello! I’m Tyler Eynon.</strong><br> I am a Systems Engineer from Canton, Ohio. I have over a decade of experience as an I.T. Engineer, as well as an In-Home repair tech. I would love to help with any issues you have with your systems!
         </p>
         "
   list:
