--- a/_data/vcard.yml
+++ b/_data/vcard.yml
@@ -29,4 +29,4 @@ main:
       url: "https://drive.google.com/"
     - title: "Contact Me"
       icon: ""
-      url: "mailto:tyler@tjeynon.us"
+      url: "#contacts-card"
