--- a/_data/content.yml
+++ b/_data/content.yml
@@ -78,12 +78,12 @@ resume:
       - year: "2014 - 2019"
         role: "Systems Engineer"
         company: "DSN Group INC"
-        text: "MSP services for many companies, End User/System Support, VMware training and Management."
+        text: "MSP services for many companies, End User/System Support, VMware training and Management"
         active: 0
         h_line: 1
 
       - year: "2006 - 2007"
-        role: "Support and Install Technicam"
+        role: "Support and Install Technician"
         company: "Valkyrie Wireless"
         text: "Wireless ISP Services, Linux Administration, and Long range wireless setup and maintanence"
         active: 0
