--- a/_data/vcard.yml
+++ b/_data/vcard.yml
@@ -15,6 +15,7 @@ main:
     - text: "Systems Engineer"
     - text: "End User Support"
     - text: "In-Home Specialist"
+    - text: "IT Consultant"
 
   social:
     - title: "Twitter"
