--- a/_data/vcard.yml
+++ b/_data/vcard.yml
@@ -27,4 +27,4 @@ main:
   buttons:
     - title: "Download CV"
       icon: ""
-      url: "https://drive.google.com/"
+      url: "https://drive.google.com/file/d/0B_w9P178HJpdaEdYdEp2Sk1BVDA/view?usp=sharing"
