--- a/_data/vcard.yml
+++ b/_data/vcard.yml
@@ -25,6 +25,6 @@ main:
       icon: "fab fa-github"
       url: "https://github.com/malankore"
   buttons:
-    - title: "Download CV"
+    - title: "Download Resume"
       icon: ""
       url: "https://drive.google.com/file/d/0B_w9P178HJpdaEdYdEp2Sk1BVDA/view?usp=sharing"
