--- a/_data/vcard.yml
+++ b/_data/vcard.yml
@@ -31,4 +31,4 @@ main:
 
     - title: "Contact Me"
       icon: ""
-      url: "https://malankore.github.io/#contacts-card"
+      url: "mailto:tyler@tjeynon.us"
