--- a/_data/content.yml
+++ b/_data/content.yml
@@ -46,7 +46,7 @@ pricing:
         - text: "$30 for the first 30 minutes"
           disable: 0
           new: 0
-      button_link: "mailto:tyler@tjeynon.us"
+      button_link: "#contacts-card"
       button_text: "Contact for Service"
       
     - icon: "speedometer speed-premium"
@@ -58,7 +58,7 @@ pricing:
         - text: "$25 for the first 30 minutes"
           disable: 0
           new: 0
-      button_link: "mailto:tyler@tjeynon.us"
+      button_link: "#contacts-card"
       button_text: "Contact for Service"
 
 ### Resume [ resume ]
